Pre-Alpha [v0.0.0.7.12-06-18]
	- added Exit from dungeon
        - displaying as 'E'
    - implemented class Backpack
        - method addItem to Backpack
        - method removeItem from Backpack
        - method compareItem in Backpack
    - implemented class Item
        - randomization of type and prefix
-----------------------------------------------------------------
Pre-Alpha [v0.0.0.6.11-06-18]
	- added randomization of size map
    - added randomization of opennig Room()
        - open Room() is displaying as '_'
        - closed Room() is displaying as '#'
-----------------------------------------------------------------
Pre-Alpha [v0.0.0.5.10-06-18]
	- added naming mechanism of game Hero by user
        with handling exceptions
-----------------------------------------------------------------
Pre-Alpha [v0.0.0.4.26-05-18]
	- added serializations of Hero object
        - txt option
        - bin option
    - added temporary instruction menu
    - new DrawImage() implementation
-----------------------------------------------------------------
Pre-Alpha [v0.0.0.3.03-05-18]
	- rebulid method Map::Move() in to Map::actorMove()
        - fixed moving the Hero on the map[][] 
        - removed redundant lines
-----------------------------------------------------------------
Pre-Alpha [v0.0.0.2.28-04-18]
	- added Move() method of class Map()
	- fixed issues of compiler code
	- changed pointers to smart pointers
	- changed file .gitignore
	- added displaying Hero on Map
------------------------------------------------------------------
Pre-Alpha [v0.0.0.1.25-04-18]
	- implemented polymorphism for Actor() class
	- added new class Room()
	- changed int matrix to vector matrix of Room() objects
	- updated DrawMap() method algorithm
	