@@ -2,22 +2,20 @@
 #include "actor.h"
 #include "actortype.h"
 #include "utilities.h"
-#include "backpack.h"
+#include "randomizer.h"
 #include <string>
 #include <windows.h>
 
 
 using namespace std;
 
-class Hero : public Actor
+class Monster : public Actor
 {
 public:
 
-
-	Hero(string = "Dida", unsigned int = 20, unsigned int = 5, int = HERO);
+	Monster(unsigned int = 10, unsigned int = 3, int = Randomizer::getRandomNumber(1, 4));
 	void Attack();
 	void showBackPack();
 	void showStats();
 	void changeName();
-	int dungeonLevel;
 };
