@@ -29,7 +29,6 @@ bool savingGame(const unique_ptr<Map>& map, bool isTxt)
 	return ret;
 }
 
-
 bool loadGame(unique_ptr<Map>& map, bool isTxt)
 {
 	bool ret = true;
@@ -75,4 +74,75 @@ void clearConsoleBuffer() {
 	char ch;
 	while (cin.readsome(&ch, 1) != 0)
 		;
+}
+
+void newGame(shared_ptr<Hero>& hero) {
+	//make map
+	unique_ptr<Map> map = make_unique<Map>();
+	//make hero
+	map->map[hero->getPositionX()][hero->getPositionY()]->actor = hero;
+	// first position of hero is always open
+	map->map[hero->getPositionX()][hero->getPositionY()]->isOpen = 2;
+	//make monster
+	list<Monster*> listMonsters;
+	for (int i = 0; i < Randomizer::getRandomNumber(1, 5); ++i) {
+		int monsterX = Randomizer::getRandomNumber(3, map->MAPSIZE - 1);
+		int monsterY = Randomizer::getRandomNumber(3, map->MAPSIZE - 1);
+		map->map[monsterX][monsterY]->actor = make_shared<Monster>();
+		map->map[monsterX][monsterY]->isOpen = 2;
+		listMonsters.push_back(new Monster());
+	}
+
+	//make room of exit
+	int exitX = Randomizer::getRandomNumber(0, map->MAPSIZE - 1);
+	int exitY = Randomizer::getRandomNumber(0, map->MAPSIZE - 1);
+	// room of exit is always open
+	if (map->map[exitX][exitY]->isOpen == 1)
+		map->map[exitX][exitY]->isOpen = 2;
+	map->map[exitX][exitY]->isExit = true;
+
+
+
+
+	char option;
+	
+
+	do {
+		system("cls");
+		DrawImage("logo.txt");
+		map->drawMap();
+		cout << endl;
+		DrawImage("instructions.txt");
+		cout << endl; cout << "MAPSIZE: " << map->MAPSIZE << " x " << map->MAPSIZE <<
+			"\t\t" << "SCORE: " << hero->score <<"\t" <<"LEVEL: " << hero->dungeonLevel << endl;
+		cout << "What you want to do? " << endl;
+		cin >> option;
+		if (option == 'w' || option == 'd' || option == 's' || option == 'a') {
+			map->actorMove(option, map->getHero());
+		}
+		else if (option == 'i') {
+			savingGame(map, true);
+		}
+		else if (option == 'k') {
+			savingGame(map, false);
+		}
+		else if (option == 'o') {
+			loadGame(map, true);
+		}
+		else if (option == 'l') {
+			loadGame(map, false);
+		}
+		else if (option == 'c') {
+			map->getHero()->showStats();
+		}
+
+
+		if (map->map[map->getHero()->getPositionX()][map->getHero()->getPositionY()]->isExit == true) {
+			system("cls");
+			return;
+		}
+			
+		
+
+	} while (true);
 }
