@@ -1,3 +1,12 @@
+Alpha [v0.0.0.8.14-06-18]
+    - first Alfa release
+	- added class Monster
+        - Monsters appear on map
+        - Monsters spawn random count and place
+    - fixed bug "going through closed Rooms"
+    - added points for moving around and defeating monsters for Hero
+    - enabled to Hero to descend to dungeon level
+-----------------------------------------------------------------
 Pre-Alpha [v0.0.0.7.12-06-18]
 	- added Exit from dungeon
         - displaying as 'E'
